[gd_scene load_steps=3 format=3 uid="uid://fg42lokla6l0"]

[ext_resource type="Script" path="res://UI/goals/goal.gd" id="1_fnb23"]
[ext_resource type="StyleBox" uid="uid://bsev88gyrl1un" path="res://UI/goals/goal_style_default.tres" id="2_tsth7"]

[node name="Goal" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 100.0
offset_bottom = 100.0
mouse_filter = 1
script = ExtResource("1_fnb23")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_tsth7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="Line 0" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Line 1" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Line 2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="MarkerCount" type="Label" parent="."]
custom_minimum_size = Vector2(23, 23)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
